Rewrite man page header

--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -12,15 +12,15 @@
 
 The program `srcml` allows you to work with the srcML format. The srcML format
 allows the use of XML for addressing, querying, and transformation of source
-code. Source code can be translated into the XML source-code representation
-srcML, where the code can be queried and manipulated using standard XML tools,
-many of which are available directly from the `srcml` program. Code in the
-srcML format can be converted back to source code.
+code. The tool translates source code into the XML source-code representation
+srcML, where standard XML tools, available directly from the `srcml` program,
+can query and transform the srcML. The tool can then convert the srcML back to
+source code. 
 
-In the srcML format, all text from the original source-code file is preserved
-including white-space, comments, and preprocessor statements. No preprocessing
-of the source code is done. In addition, the tool can be applied to individual
-source-code files, or code fragments.
+The srcML format preserves all text from the original source-code file
+including white-space, comments, and preprocessor statements. The C Preprocessor
+is not run on the source code. The program works on large projects, individual
+source-code files, or code fragments, including individual statements.
 
 The conversion to the srcML format uses a custom parser that is fast and
 tolerant to incomplete source code and uncompilable code.
@@ -333,9 +333,9 @@ directory as the root directory.
 `--${XPATH_OPTION_LONG}=<expression>`
 : Apply Xpath <expression> query to each individual unit.
 
-In Xpath expressions, the default namespace cannot be used, so element names must have a prefix, e.g., `src`, `cpp`, etc. By default, the result is a srcML archive where each unit is a query result, marked with the original filename.
+In Xpath expressions, the default namespace cannot be used, so element names must have a prefix, e.g., `src`, `cpp`, etc. If path from the root is not given, i.e., '//...' or '/src:unit/..', context is assumed to the '//', e.g., 'src:name' is the same as '//src:name'. 
 
-As an alternative, the original srcML can be preserved with the query results marked with an attribute, wrapped with an element, or both. Note that the prefix and uri used for the namespace
+By default, the result is a srcML archive where each unit is a query result, marked with the original filename. As an alternative, the original srcML can be preserved with the query results marked with an attribute, wrapped with an element, or both. Note that the prefix and uri used for the namespace
 must be declared with the option `--${XMLNS_FLAG}:`.
 
 `--${ATTRIBUTE_LONG}` _prefix:name=value_
