Refine man page introduction

--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -25,12 +25,9 @@ source-code files, or code fragments, including individual statements.
 The conversion to the srcML format uses a custom parser that is fast and
 tolerant to incomplete source code and uncompilable code.
 
-Standard input may be specified by using the character '-' in the place of
-an input source-code file or providing no input source-code file. Similarly,
-standard output may be specified with the '-' character for the output srcML
-file or by not providing an output srcML file.
-
-A source-code language must be specified when input is from standard input.
+Use of the character '-' in the place of an input file, or providing no input
+file, implies reading from standard input. A source-code language must be specified
+when source-code input is from standard input.
 
 ## GENERAL OPTIONS
 
