--- a/examples/libsrcml/CMakeLists.txt
+++ b/examples/libsrcml/CMakeLists.txt
@@ -24,7 +24,7 @@ install(FILES ${EXAMPLES} DESTINATION share/srcml/examples COMPONENT EXAMPLES)
 
 if(BUILD_EXAMPLES)
 
-	set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -std=c99")
+	set(CMAKE_C_STANDARD 99)
 
 	foreach(EXAMPLE ${EXAMPLES})
 	    get_filename_component(EXAMPLE_NAME ${EXAMPLE} NAME_WE)
