Change URI to URL whenever used

--- a/doc/manpage/CMakeLists.txt
+++ b/doc/manpage/CMakeLists.txt
@@ -120,10 +120,10 @@ set(DEBUG_FLAG_LONG "debug")
 set(SRCML_ERR_NS_PREFIX_DEFAULT "err")
 set(SRCML_CPP_NS_PREFIX_DEFAULT "cpp")
 set(SRCML_EXT_POSITION_NS_PREFIX_DEFAULT "pos")
-set(SRCML_ERR_NS_URI "http://www.srcML.org/srcML/srcerr")
-set(SRCML_SRC_NS_URI "http://www.srcML.org/srcML/src")
-set(SRCML_CPP_NS_URI "http://www.srcML.org/srcML/cpp")
-set(SRCML_EXT_POSITION_NS_URI "http://www.srcML.org/srcML/position")
+set(SRCML_ERR_NS_URL "http://www.srcML.org/srcML/srcerr")
+set(SRCML_SRC_NS_URL "http://www.srcML.org/srcML/src")
+set(SRCML_CPP_NS_URL "http://www.srcML.org/srcML/cpp")
+set(SRCML_EXT_POSITION_NS_URL "http://www.srcML.org/srcML/position")
 set(MAX_THREADS_FLAG_LONG "max-threads")
 set(EXTERNAL_LONG "external")
 set(XML_PROCESSING_FLAG_LONG "xml-processing")
