--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -144,7 +144,7 @@ ${TABS_FLAG}.
 `--${POSITION_FLAG_LONG}`
 : Insert attributes for the start (line and column) and end (line and column) of an element in the start tag. These attributes have a default prefix of
 "${SRCML_EXT_POSITION_NS_PREFIX_DEFAULT}" in the namespace
-"${SRCML_EXT_POSITION_NS_URI}", e.g., `<class pos:start="15,1" pos:end="25,2">`
+"${SRCML_EXT_POSITION_NS_URL}", e.g., `<class pos:start="15,1" pos:end="25,2">`
 
 `--${TABS_FLAG}`=<tabsize>
 : Set the tab size. Default is 8. Use of this option automatically
@@ -158,7 +158,7 @@ is preserved.
 `--${CPP_FLAG_LONG}`
 : Turns on parsing and markup of preprocessor statements in non-C/C++
 languages such as Java. Can also be enabled by defining a prefix for
-this cpp namespace URL, e.g., `--${XMLNS_FLAG}:${SRCML_CPP_NS_PREFIX_DEFAULT}="${SRCML_CPP_NS_URI}"`.
+this cpp namespace URL, e.g., `--${XMLNS_FLAG}:${SRCML_CPP_NS_PREFIX_DEFAULT}="${SRCML_CPP_NS_URL}"`.
 
 `--${CPP_MARKUP_IF0_FLAG_LONG}`
 : Place markup in \#if 0 regions. The default is to keep just the source-code
@@ -186,20 +186,20 @@ The following options can be used to change the prefixes.
 Each extensions to the srcML markup has its own namespace. These are
 indicated in the srcML document by the declaration of the specific
 extension namespace. These flags make it easier to declare, and are
-an alternative way to turn on options by declaring the URI for an option.
+an alternative way to turn on options by declaring the URL for an option.
 
-`--${XMLNS_FLAG}`=<uri>
-: Sets the <uri> for the default namespace. The predefined URI is:
+`--${XMLNS_FLAG}`=<url>
+: Sets the <url> for the default namespace. The predefined URL is:
 
-    `--${XMLNS_FLAG}=${SRCML_SRC_NS_URI}`
+    `--${XMLNS_FLAG}=${SRCML_SRC_NS_URL}`
 
-`--${XMLNS_FLAG}:`<prefix>=<uri>
-: Sets the namespace prefix PREFIX for the namespace URI.
-There is a set of standard URIs for the elements in srcML, each with a
-predefined prefix. The predefined URIs and prefixes are:
+`--${XMLNS_FLAG}:`<prefix>=<url>
+: Sets the namespace prefix PREFIX for the namespace URL.
+There is a set of standard URLs for the elements in srcML, each with a
+predefined prefix. The predefined URLs and prefixes are:
 
-    `--${XMLNS_FLAG}:${SRCML_CPP_NS_PREFIX_DEFAULT}=${SRCML_CPP_NS_URI}`  
-    `--${XMLNS_FLAG}:${SRCML_EXT_POSITION_NS_PREFIX_DEFAULT}=${SRCML_EXT_POSITION_NS_URI}`
+    `--${XMLNS_FLAG}:${SRCML_CPP_NS_PREFIX_DEFAULT}=${SRCML_CPP_NS_URL}`  
+    `--${XMLNS_FLAG}:${SRCML_EXT_POSITION_NS_PREFIX_DEFAULT}=${SRCML_EXT_POSITION_NS_URL}`
 
 ## METADATA OPTIONS
 
@@ -244,8 +244,8 @@ then exit.
 `--${SHOW_UNIT_COUNT_FLAG_LONG}`
 : Display the unit count and exit.
 
-`--${PREFIX_FLAG_LONG}`=<uri>
-: Display a prefix given by a <uri> and exit.
+`--${PREFIX_FLAG_LONG}`=<url>
+: Display a prefix given by a <url> and exit.
 
 The following options allow the user to control the attributes:
 
@@ -332,7 +332,7 @@ directory as the root directory.
 
 In Xpath expressions, the default namespace cannot be used, so element names must have a prefix, e.g., `src`, `cpp`, etc. If path from the root is not given, i.e., '//...' or '/src:unit/..', context is assumed to the '//', e.g., 'src:name' is the same as '//src:name'. 
 
-By default, the result is a srcML archive where each unit is a query result, marked with the original filename. As an alternative, the original srcML can be preserved with the query results marked with an attribute, wrapped with an element, or both. Note that the prefix and uri used for the namespace
+By default, the result is a srcML archive where each unit is a query result, marked with the original filename. As an alternative, the original srcML can be preserved with the query results marked with an attribute, wrapped with an element, or both. Note that the prefix and url used for the namespace
 must be declared with the option `--${XMLNS_FLAG}:`.
 
 `--${ATTRIBUTE_LONG}` _prefix:name=value_
@@ -341,14 +341,14 @@ must be declared with the option `--${XMLNS_FLAG}:`.
 `--${ELEMENT_LONG}` _prefix:name_
 : Wraps every Xpath expression result with an element of the form _prefix:name_. May be mixed with `--${ATTRIBUTE_LONG}`.
 
-`--${XSLT_LONG}` <file|uri>
-: Apply a transformation from an XSLT <file> or <uri> to each individual unit.
+`--${XSLT_LONG}` <file|url>
+: Apply a transformation from an XSLT <file> or <url> to each individual unit.
 
 `--${XSLT_PARAM}` _name_="<value>"
 : Passes the string parameter _name_ with UTF-8 encoded string <value> to the XSLT program
 
-`--${RELAXNG_OPTION_LONG}`=<file|uri>
-: Output individual units that match the RELAXNG <file> or <uri>.
+`--${RELAXNG_OPTION_LONG}`=<file|url>
+: Output individual units that match the RELAXNG <file> or <url>.
 
 
 ### EXAMPLES
