Improve manpage descriptions

--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -10,14 +10,14 @@
 
 ## DESCRIPTION
 
-The program `srcml` allows you to work with the srcML format. The srcML format
-allows the use of XML for addressing, querying, and transformation of source
-code. The tool translates source code into the XML source-code representation
+The program `srcml` supports the srcML format. The srcML format
+presents an XML view of source code for addressing, querying, and transformation.
+The tool translates source code into the XML source-code representation
 srcML, where standard XML tools, available directly from the `srcml` program,
 can query and transform the srcML. The tool can then convert the srcML back to
 source code. 
 
-The srcML format preserves all text from the original source-code file
+The srcML format preserves all text of the source code,
 including white-space, comments, and preprocessor statements. The C Preprocessor
 is not run on the source code. The program works on large projects, individual
 source-code files, or code fragments, including individual statements.
@@ -39,11 +39,11 @@ when source-code input is from standard input.
 
 `-${VERBOSE_FLAG_SHORT}`, `--${VERBOSE_FLAG_LONG}`
 : Conversion and status information to stderr, including encodings
-used. Especially useful with for monitoring progress of the from file list
-option, a directory, or source-code archive (e.g. tar.gz).
+used. Especially useful with for monitoring progress of the option `--${FILES_FROM_LONG}`,
+a directory, or source-code archive (e.g., tar.gz).
 
 `-${QUIET_FLAG_SHORT}`, `--${QUIET_FLAG_LONG}`
-: Supresses status messages.
+: Suppresses status messages.
 
 `-${OUTPUT_FLAG_SHORT}` <file>, `--${OUTPUT_FLAG_LONG}`=<file>
 : Write the output to <file>. By default, it writes to standard output.
@@ -53,57 +53,62 @@ option, a directory, or source-code archive (e.g. tar.gz).
 
 ## CREATING SRCML
 
-The following describe options for creating srcML. The format of the
-input affects the format of the output, unless otherwise specified.
+The following options are to create srcML. The format of the
+input affects the format of the output unless otherwise specified.
 If the input is source-code files, then the output is expected to be
 in srcML format. If the input is in srcML format, then the output is
 in source-code format.
 
 `-${TEXT_FLAG_SHORT}` <text>, `--${TEXT_FLAG_LONG}`=<text>
-: Processes the <text> string as source code, respecting the escaped newline
-charater. Useful for short text inputs. Common escape sequences in C and echo are
-expanded, including \n, \t, \a, \b, \v, \e \xHH where H is 1 to 2 hex values, and \NNN and \0NNN where N is 1 to 3 octal digits.
+: Input the <text> string as source code.
+Useful for short text input. Common escape sequences in C and echo are
+expanded, including \n, \t, \a, \b, \v, \e \xHH where H is 1 to 2 hex values,
+and \NNN and \0NNN where N is 1 to 3 octal digits.
 
 `--${FILES_FROM_LONG}`=<file>
-: Treats the input <file> as a list of source files.
+: Treat the input <file> as a list of source files.
 Each file is separately translated and collectively stored into a
-single srcML archive. The list has a single filename on each line
-starting at the beginning of the line. Blank lines and lines that
-begin with the character '\#' are ignored. As with input and output
-files, using the character '-' in place of a file name takes the input
+single srcML archive. The list has a single filename on each line.
+Ignored lines include blank lines and lines that begin with the character '\#'.
+As with input and output files, using the character '-' in place of a file name takes the input
 list from standard input.
 
 `-${LANGUAGE_FLAG_SHORT}` <language>, `--${LANGUAGE_FLAG_LONG}`=<language>
-: The programming language of the source-code file. Allowable values are
-C, C++, C\#, or Java. The language affects parsing, the allowed
+: Set the programming language of the input source code. Allowable values are
+C, C++, C\#, and Java. The language affects parsing, the allowed
 markup, and what is considered a keyword. The value is also stored
 individually as an attribute in each unit. If the input is a directory 
 or source-code archive (e.g., .tar.gz, .zip), the language only applies to files with source-code extensions.
-For non-standard source-code extensions, use --${REGISTER_EXTENSION_FLAG_LONG} to register the extension.
+Use --${REGISTER_EXTENSION_FLAG_LONG} to register non-standard source-code extensions.
 
 If not specified, the programming language is based on the file
 extension. Language must be specified if using standard input. If the
 file extension is not available or not in the standard list, then the
 program will skip that file. This allows you to run `srcml` on a
-project directory with many source-code files and config files, and
-only the files with supported extensions will be parsed by `srcml`.
+project directory with source and non-source files, where `srcml`
+only parses files with supported extensions.
 
 `--${REGISTER_EXTENSION_FLAG_LONG}` <extension>=<language>
-: Sets the <extension> to associate with a given <language>. Note
+: Set the file <extension> map to a given <language>. Note
 that the extensions do not contain the period character '.', e.g., `--register-ext "h=C++"`
 
-    A common use of this is C++ files that use the .h extension for header
-files. By default these will be translated as C source-code files. This
+A common use is C++ files that use the .h extension for header
+files. By default, these are processed as C source-code files. This
 option can be used to override this behavior.
 
 `--${SRC_ENCODING_FLAG_LONG}`=<encoding>
-: Uses the <encoding> when processing the input source-code file. The
+: Use the <encoding> when processing the input source-code file. The
 default is to try to automatically determine this when possible, i.e., ISO-8859-1 is assumed
-unless a non-character is detected. Possible encodings include "UTF-16", "ISO-10646-UCS-2",
-or "ISO-8859-1". On UNIX platforms, a full list of encodings can be obtained by using the command `iconv -l`.
+unless a non-character is detected. Encodings include "UTF-16", "ISO-10646-UCS-2",
+and "ISO-8859-1". On UNIX platforms, a full list of encodings can be obtained by using the command `iconv -l`.
+
+`--${EOL_FLAG_LONG}`=<eol>
+: Use the <eol> for output of source code. Allowable values are the default `auto`, 'UNIX' or linefeed `lf`,
+carriage return `cr`, and 'Windows' or carriage return, linefeed `crlf`. In most cases the default
+`auto` is sufficient.
 
 `-${ARCHIVE_FLAG_SHORT}`, `--${ARCHIVE_FLAG_LONG}`
-: Creates a srcML archive, which can contain multiple files in the srcML
+: Create a srcML archive, which can contain multiple files in the srcML
 format. Default when provided more than one file or a directory as
 input.
 
@@ -112,12 +117,11 @@ the output will be in the proper format, but these allow you to specify.
 
 `-${OUTPUT_XML_FLAG_SHORT}`,`--${OUTPUT_XML_FLAG_LONG}`
 : Output srcML as complete and valid XML. 
-This is the default when the input is source
-code or files containing source code.
+The default when the input is source code or files containing source code.
 
 `-${OUTPUT_XML_FRAGMENT_FLAG_LONG}`
-: Output srcML as an inner unit. This does not include
-the namespaces declared on the archive root element, and may not have a root element, so is technically not valid XML.
+: Output the inner (inside the unit tag) of the srcML. This does not include
+any namespaces or attributes on the archive root element, and is technically not valid XML.
 
 `-${OUTPUT_XML_RAW_FLAG_LONG}`
 : Output the XML inside of the srcML unit element. This is not valid XML as it contains no
@@ -136,7 +140,7 @@ srcml --text="a;" -l C++ --output-xml-inner
 ## MARKUP OPTIONS
 
 Optional line and column attributes are used to indicate the position of
-an element in the original source code document. Both the line and
+an element in the original source code. Both the line and
 column start at 1. The column position is based on the tab settings with
 a default tab size of 8. Other tab sizes can be set using the
 ${TABS_FLAG}.
@@ -150,18 +154,17 @@ ${TABS_FLAG}.
 : Set the tab size. Default is 8. Use of this option automatically
 turns on the position attributes.
 
-
 This set of options allows control over how preprocessing regions are
 handled, i.e., whether parsing and markup occur. In all cases the text
 is preserved.
 
 `--${CPP_FLAG_LONG}`
-: Turns on parsing and markup of preprocessor statements in non-C/C++
+: Turn on parsing and markup of preprocessor statements in non-C/C++
 languages such as Java. Can also be enabled by defining a prefix for
 this cpp namespace URL, e.g., `--${XMLNS_FLAG}:${SRCML_CPP_NS_PREFIX_DEFAULT}="${SRCML_CPP_NS_URL}"`.
 
 `--${CPP_MARKUP_IF0_FLAG_LONG}`
-: Place markup in \#if 0 regions. The default is to keep just the source-code
+: Markup \#if 0 regions. The default is to preserve the source-code
 text in these regions, without any markup. This option indicates that the \#if 0 regions 
 should be treated as source code, and marked up accordingly.
 
@@ -174,12 +177,12 @@ The default is to markup these regions.
 The following options control the format of the XML.
 
 `--${XML_ENCODING_FLAG_LONG}`=<encoding>
-: Uses the encoding for the output srcML file. The
+: Use the encoding for the output srcML file. The
 default is UTF-8. Possible encodings can be obtained by using the
-command `iconv -l` on UNIX platforms. The encoding is stored on the xml declaration.
+command `iconv -l` on UNIX platforms. The encoding is stored on the XML declaration.
 
 `--${NO_XML_DECL_LONG}`
-: No output of the default XML declaration. Useful when the output is
+: Do not output the default XML declaration. Useful when the output is
 to be placed inside another XML document.
 
 The following options can be used to change the prefixes.
@@ -189,12 +192,12 @@ extension namespace. These flags make it easier to declare, and are
 an alternative way to turn on options by declaring the URL for an option.
 
 `--${XMLNS_FLAG}`=<url>
-: Sets the <url> for the default namespace. The predefined URL is:
+: Set the <url> for the default namespace. The predefined URL is:
 
     `--${XMLNS_FLAG}=${SRCML_SRC_NS_URL}`
 
 `--${XMLNS_FLAG}:`<prefix>=<url>
-: Sets the namespace prefix PREFIX for the namespace URL.
+: Set the namespace prefix PREFIX for the namespace URL.
 There is a set of standard URLs for the elements in srcML, each with a
 predefined prefix. The predefined URLs and prefixes are:
 
@@ -260,7 +263,7 @@ descriptive and has no interpretation by `srcml`. It is useful for specifying
 a directory or defining the source protocol.
 
 `-${SRCVERSION_FLAG_SHORT}` <version>, `--${SRCVERSION_FLAG_LONG}`=<version>
-: Sets the value of the attribute version to version. This is a
+: Set the value of the attribute version to version. This is a
 purely-descriptive attribute, where the value has no interpretation by
 `srcml`. The attribute is applied to the root element, and in the case
 of a srcML archive, it is also applied to each unit in the archive.
@@ -271,7 +274,7 @@ the contents of the source-code file. This is enabled by default when
 working with srcML archives.
 
 `--${TIMESTAMP_FLAG_LONG}`
-: Sets the timestamp of the output srcML file to the last modified
+: Set the timestamp of the output srcML file to the last modified
 time of the input source-code archive. This is the
 last modified time based on the archive files.
 
@@ -328,24 +331,24 @@ directory as the root directory.
 ## TRANSFORMATIONS
 
 `--${XPATH_OPTION_LONG}=<expression>`
-: Apply Xpath <expression> query to each individual unit.
+: Query each individual unit using the Xpath <expression>.
 
-In Xpath expressions, the default namespace cannot be used, so element names must have a prefix, e.g., `src`, `cpp`, etc. If path from the root is not given, i.e., '//...' or '/src:unit/..', context is assumed to the '//', e.g., 'src:name' is the same as '//src:name'. 
+The default prefix cannot be used in Xpath expressions. Element names must have a prefix, e.g., `src`, `cpp`, etc. If path from the root is not given, i.e., '//...' or '/src:unit/..', context is assumed to the '//', e.g., 'src:name' is the same as '//src:name', and 'count(src:name)' is the same as 'count(//src:name)'. 
 
 By default, the result is a srcML archive where each unit is a query result, marked with the original filename. As an alternative, the original srcML can be preserved with the query results marked with an attribute, wrapped with an element, or both. Note that the prefix and url used for the namespace
 must be declared with the option `--${XMLNS_FLAG}:`.
 
 `--${ATTRIBUTE_LONG}` _prefix:name=value_
-: Adds the attribute _prefix:name="value"_ to every Xpath expression result.
+: Add the attribute _prefix:name="value"_ to every Xpath expression result.
 
 `--${ELEMENT_LONG}` _prefix:name_
-: Wraps every Xpath expression result with an element of the form _prefix:name_. May be mixed with `--${ATTRIBUTE_LONG}`.
+: Wrap every Xpath expression result with an element of the form _prefix:name_. May be mixed with `--${ATTRIBUTE_LONG}`.
 
 `--${XSLT_LONG}` <file|url>
 : Apply a transformation from an XSLT <file> or <url> to each individual unit.
 
 `--${XSLT_PARAM}` _name_="<value>"
-: Passes the string parameter _name_ with UTF-8 encoded string <value> to the XSLT program
+: Pass the string parameter _name_ with UTF-8 encoded string <value> to the XSLT program
 
 `--${RELAXNG_OPTION_LONG}`=<file|url>
 : Output individual units that match the RELAXNG <file> or <url>.
