Integrate eol options

--- a/doc/manpage/CMakeLists.txt
+++ b/doc/manpage/CMakeLists.txt
@@ -62,6 +62,7 @@ set(LANGUAGE_FLAG_LONG "language")
 set(LANGUAGE_FLAG_SHORT "l")
 set(REGISTER_EXTENSION_FLAG_LONG "register-ext")
 set(SRC_ENCODING_FLAG_LONG "src-encoding")
+set(EOL_FLAG_LONG "eol")
 set(ARCHIVE_FLAG_SHORT "r")
 set(ARCHIVE_FLAG_LONG "archive")
 set(OUTPUT_XML_FLAG_LONG "output-xml")
