Fix unfinished comments up to EOF

--- a/test/parser/testsuite/CMakeLists.txt
+++ b/test/parser/testsuite/CMakeLists.txt
@@ -166,6 +166,8 @@ foreach(GEN ${SUITE})
 
     elseif(CATEGORY STREQUAL "LANGUAGE_CXX_GEN")
 
+    elseif(CATEGORY STREQUAL "LANGUAGE_NOP")
+
     elseif(CATEGORY STREQUAL "LANGUAGE_C_FAMILY")
 
         list(APPEND TESTFILES "${URL}.cpp.xml")
