Improve client descriptions by changing 'text' to 'source' #1576

--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -155,7 +155,7 @@ ${TABS_FLAG}.
 turns on the position attributes.
 
 This set of options allows control over how preprocessing regions are
-handled, i.e., whether parsing and markup occur. In all cases the text
+handled, i.e., whether parsing and markup occur. In all cases the source
 is preserved.
 
 `--${CPP_FLAG_LONG}`
@@ -164,12 +164,12 @@ languages such as Java. Can also be enabled by defining a prefix for
 this cpp namespace URL, e.g., `--${XMLNS_FLAG}:${SRCML_CPP_NS_PREFIX_DEFAULT}="${SRCML_CPP_NS_URL}"`.
 
 `--${CPP_MARKUP_IF0_FLAG_LONG}`
-: Markup \#if 0 regions. The default is to preserve the source-code
-text in these regions, without any markup. This option indicates that the \#if 0 regions 
+: Markup \#if 0 regions. The default is to preserve the source code
+in these regions, without any markup. This option indicates that the \#if 0 regions 
 should be treated as source code, and marked up accordingly.
 
 `--${CPP_NO_MARKUP_ELSE_FLAG_LONG}`
-: Only place text in \#else and \#elif regions, leaving out markup.
+: Only place source code in \#else and \#elif regions, leaving out markup.
 The default is to markup these regions.
 
 ## XML FORMAT
