Change from --output-xml* to --output-srcml*

--- a/doc/manpage/CMakeLists.txt
+++ b/doc/manpage/CMakeLists.txt
@@ -65,10 +65,10 @@ set(SRC_ENCODING_FLAG_LONG "src-encoding")
 set(EOL_FLAG_LONG "eol")
 set(ARCHIVE_FLAG_SHORT "r")
 set(ARCHIVE_FLAG_LONG "archive")
-set(OUTPUT_XML_FLAG_LONG "output-xml")
+set(OUTPUT_XML_FLAG_LONG "output-srcml")
 set(OUTPUT_XML_FLAG_SHORT "X")
-set(OUTPUT_XML_FRAGMENT_FLAG_LONG "output-xml-outer")
-set(OUTPUT_XML_RAW_FLAG_LONG "output-xml-inner")
+set(OUTPUT_XML_FRAGMENT_FLAG_LONG "output-srcml-outer")
+set(OUTPUT_XML_RAW_FLAG_LONG "output-srcml-inner")
 set(POSITION_FLAG_LONG "position")
 set(TABS_FLAG "tabs")
 set(CPP_FLAG_LONG "cpp")
