--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -129,11 +129,11 @@ namespace declarations and does not necessarily have a single root element.
 
 ### Examples
 
-srcml --text="a;" -l C++ --output-xml-outer
+srcml --text="a;" -l C++ --output-srcml-outer
 
 ```<unit revision="1.0.0" language="C++"><expr_stmt><expr><name>a</name></expr>;</expr_stmt></unit>```
 
-srcml --text="a;" -l C++ --output-xml-inner
+srcml --text="a;" -l C++ --output-srcml-inner
 
 ```<expr_stmt><expr><name>a</name></expr>;</expr_stmt>```
 
