Improve cmake messages for local libarchive builds

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -102,11 +102,23 @@ else()
             message(STATUS "Completed building local versions of libarchive and xz")
         endif()
 
+        message(STATUS "Linking to local version of libarchive")
+
         # different versions of libarchive place the generated libarchive.a in different places
         find_library(LIBARCHIVE_LOCAL_LIBRARY NAMES libarchive.a PATHS ${OSX_LIBARCHIVE_PATH} PATH_SUFFIXES libarchive /.libs NO_DEFAULT_PATH)
 
         set(LibArchive_INCLUDE_DIRS ${OSX_LIBARCHIVE_PATH}/libarchive)
         set(LibArchive_LIBRARIES  ${LIBARCHIVE_LOCAL_LIBRARY} ${CMAKE_BINARY_DIR}/../xz/src/liblzma/.libs/liblzma.a /usr/lib/libbz2.dylib /usr/lib/libcompression.dylib /usr/lib/libz.dylib /usr/lib/libxar.dylib /usr/lib/libiconv.dylib /usr/lib/libexpat.dylib)
+
+        message(STATUS "  LibArchive_INCLUDE_DIRS:")
+        foreach(library ${LibArchive_INCLUDE_DIRS})
+            message(STATUS "    ${library}")
+        endforeach()
+
+        message(STATUS "  LibArchive_LIBRARIES:")
+        foreach(library ${LibArchive_LIBRARIES})
+            message(STATUS "    ${library}")
+        endforeach()
 
     # macOS with homebrew
     elseif(EXISTS "/usr/local/opt/libarchive")
