Fix and remove todo's

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -51,8 +51,7 @@ file(GLOB CLIENT_SOURCE *.hpp *.cpp)
 add_executable(srcml ${CLIENT_SOURCE})
 target_include_directories(srcml BEFORE PRIVATE . ${CMAKE_EXTERNAL_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src/libsrcml)
 
-# @todo Is this necessary? Let CMake determin this instead
-# Maybe coverage is not a default part of Debug?
+# Add coverage to default part of Debug
 if(CMAKE_BUILD_TYPE STREQUAL "Debug" AND CMAKE_COMPILER_IS_GNUCXX)
     target_link_libraries(srcml libsrcml_link ${SRCML_LIBRARIES} gcov)
 else()
